add_goods_contents
購入済商品コンテンツを追加

--- a/app/views/shared/_purchased_html.haml
+++ b/app/views/shared/_purchased_html.haml
@@ -1,6 +1,6 @@
 %main.l-container.clearfix
   .l-content
-    %section.mypage-tab-container
+    %section.mypage-tab-container
       %h2.mypage-tab-head 
         購入した商品
       %ul.mypage-tabs
@@ -17,14 +17,212 @@
           %li.mypage-item-not-found.bold
             取引中の商品がありません
         %ul#mypage-tab-transaction-old.mypage-item-list.tab-pane.active
-          %li
+          %li
             =link_to "#", class: mypage-item-link
               %figure
                 = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
                 .mypage-item-text
-                  清水寺
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
                 .mypage-item-status.bold.done
-                  売却済
+                  取引完了
               %i.icon-arrow-right 
                 \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+          %li
+            =link_to "#", class: mypage-item-link
+              %figure
+                = image_tag '/goods_sample_3.jpg', size: "", alt: "" , class: 'lazyloaded'
+              .mypage-item-body
+                .mypage-item-text
+                  「偽物にんにくサプリメント」を購入しました。
+                     %span
+                       取引が完了しました
+                .mypage-item-status.bold.done
+                  取引完了
+              %i.icon-arrow-right 
+                \::before
+    
