fix google logo

--- a/app/assets/stylesheets/signup1.scss
+++ b/app/assets/stylesheets/signup1.scss
@@ -57,6 +57,8 @@
         position: relative;
       }
       .googlelogo {
+        height: 20px;
+        width: 20px;
         display: flex;
         font-size: 20px;
         position: absolute;
