--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -16,7 +16,7 @@
         %i.fab.fa-facebook-square
         Facebookで登録する
       =link_to "aaa", class:"contents__btn contents__btn--3" do
-        %img{ src:"https://img.icons8.com/color/20/000000/google-logo.png", class:"googlelogo" }
+        = image_tag '/signup-google-color-logo.png', size: "", alt: "google-color-logo" , class: 'googlelogo'
         Googleで登録する
         
 
