--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -3,28 +3,6 @@
 %html
   %head
 
-    = render 'shared/main_page_header'
-
-    .logout-contents
-      = render 'shared/logout'
-      = render 'shared/profile-sidebar'
-
-    %footer
-      = render 'shared/aside'
-      = render 'shared/footer'
-
-
-
-
-    %header= render "shared/main_page_header"
-
-    .contents-box
-      %profile-main= render "shared/credit1"
-      %profile-side= render "shared/profile-sidebar"
-
-  %footer
-    = render "shared/aside"
-    = render "shared/footer"
-
-    %header= render 'shared/purchase-confirmation'
+    = render 'shared/login-header'
+    = render 'shared/phone-input'
 
