--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,7 +4,9 @@
     =link_to "#", class: "confirmation-heade__link" do
       = image_tag '/confirmation-mercarilogo.svg', size: "", alt: "confirmation-mercarilogo" , class: 'confirmation-header__link__mercarilogo'
 
+-# 他cssとの干渉を避けるため、全体をラップする
 .wrapper
+  -# 登録方法選択画面
   .contents
     .contents__head
       新規会員登録
