--- a/app/assets/stylesheets/_login-header.scss
+++ b/app/assets/stylesheets/_login-header.scss
@@ -1,85 +1,87 @@
-.header {
-  height:128px;
-  text-align: center;
-  background-color: #f5f5f5;
-  h1 {
-    margin: 40px 0 0;
-    display: inline-block;
-    
-    a {
-      width: 185px;
-      height: 49px;
-      line-height: 49px;
-      margin: 0 8px 0 0;
-    }
-  }
-  nav {
-    padding: 40px 0 0 44px;
-    display: inline-block;
-    vertical-align: top;
-    ol {
-      .active {
-        font-weight: 600;
-        color:#ea362dd5;
-        min-width: 60px;
-        margin: 0 40px 0 0;
-        display: inline-block;
-        position: relative;
-        z-index: 1;
-        font-size: 12px;
-        .status {
-          background-color: #ea352d;
-          width: 12px;
-          height: 12px;
-          margin: 8px auto 0;
-          border-radius: 50%;
-          // .before {
-          //   position: absolute;
-          //   bottom: 5px;
-          //   z-index: -1;
-          //   display: block;
-          //   content: '';
-          //   width: 100%;
-          //   height: 2px;
-          //   background-color: #ccc;
-          // }
-        }
+.phone-input-wrapper{
+  .header {
+    height:128px;
+    text-align: center;
+    background-color: #eee;
+    h1 {
+      margin: 40px 0 0;
+      display: inline-block;
+      
+      a {
+        width: 185px;
+        height: 49px;
+        line-height: 49px;
+        margin: 0 8px 0 0;
       }
-      li {
-        font-weight: 200;
-        color: #888;
-        min-width: 60px;
-        margin: 0 40px 0 0;
-        display: inline-block;
-        position: relative;
-        z-index: 1;
-        font-size: 12px;
-        .status {
-          background-color: #ccc;
-          width: 12px;
-          height: 12px;
-          margin: 8px auto 0;
-          border-radius: 50%;
-          .after {
-            position: absolute;
-            bottom: 5px;
-            z-index: -1;
-            display: block;
-            content: '';
-            width: 100%;
-            height: 2px;
-            background-color: #ccc;
+    }
+    nav {
+      padding: 40px 0 0 44px;
+      display: inline-block;
+      vertical-align: top;
+      ol {
+        .active {
+          font-weight: 600;
+          color:#ea362dd5;
+          min-width: 60px;
+          margin: 0 40px 0 0;
+          display: inline-block;
+          position: relative;
+          z-index: 1;
+          font-size: 12px;
+          .status {
+            background-color: #ea352d;
+            width: 12px;
+            height: 12px;
+            margin: 8px auto 0;
+            border-radius: 50%;
+            // .before {
+            //   position: absolute;
+            //   bottom: 5px;
+            //   z-index: -1;
+            //   display: block;
+            //   content: '';
+            //   width: 100%;
+            //   height: 2px;
+            //   background-color: #ccc;
+            // }
           }
-          .before {
-            position: absolute;
-            bottom: 5px;
-            z-index: -1;
-            display: block;
-            content: '';
-            width: 100%;
-            height: 2px;
+        }
+        li {
+          font-weight: 200;
+          color: #888;
+          min-width: 60px;
+          margin: 0 40px 0 0;
+          display: inline-block;
+          position: relative;
+          z-index: 1;
+          font-size: 12px;
+          .status {
             background-color: #ccc;
-            right: 50%;
+            width: 12px;
+            height: 12px;
+            margin: 8px auto 0;
+            border-radius: 50%;
+            .after {
+              position: absolute;
+              bottom: 5px;
+              z-index: -1;
+              display: block;
+              content: '';
+              width: 100%;
+              height: 2px;
+              background-color: #ccc;
+            }
+            .before {
+              position: absolute;
+              bottom: 5px;
+              z-index: -1;
+              display: block;
+              content: '';
+              width: 100%;
+              height: 2px;
+              background-color: #ccc;
+              right: 50%;
+            }
           }
         }
       }
