--- a/app/assets/stylesheets/_phone-input.scss
+++ b/app/assets/stylesheets/_phone-input.scss
@@ -30,10 +30,11 @@
             
           }
           .phone-number {
+            box-sizing: border-box;
             width: 100%;
             margin: 8px 0 0;
-            height: 30px;
-            padding: 10px 16px 8px;
+            height: 48px;
+            padding-left: 16px; 
             border-radius: 4px;
             border: 1px solid #ccc;
             background-color: #fff;
