--- a/app/assets/stylesheets/_phone-input.scss
+++ b/app/assets/stylesheets/_phone-input.scss
@@ -27,9 +27,8 @@
           font-weight: 600;
           label {
             font-weight: 600;
-            
           }
-          .phone-number {
+          input{
             box-sizing: border-box;
             width: 100%;
             margin: 8px 0 0;
