--- a/app/assets/stylesheets/signup3.scss
+++ b/app/assets/stylesheets/signup3.scss
@@ -1,96 +1,106 @@
-.contents {
-  font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
-  height: 100%;
-  width: 560px;
-  margin: 0 auto;
-  background-color: #fff;
-  &__head{
+.signup3-wrapper{
+  .contents {
     font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
-    padding: 25px;
-    color: black;
-    font-size:18px;
-    font-weight: bold;
-    text-align: center;
-    border-bottom: 1px solid whitesmoke;
-  }
-  &__form{
-    display: block;
-    width: 300px;
-    border-radius: 5px;
+    height: 100%;
+    width: 560px;
     margin: 0 auto;
-    padding: 20px 20px 60px;
-    font-size: 10px;
-    color: black;
-    text-decoration: none;
-    line-height: 40px;
-    &__title1 {
-      font-size: 12px;
+    background-color: #fff;
+    &__head{
+      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+      padding: 25px;
+      color: black;
+      font-size:18px;
+      font-weight: bold;
+      text-align: center;
+      border-bottom: 1px solid whitesmoke;
     }
-    &__title {
-      font-size: 12px;
-    }
-    &__require {
-      margin: 0 0 0 8px;
-      padding: 3px 4px;
-      border-radius: 2px;
-      background-color: #ea352d;
-      color: #fff;
-      font-size: 10px;
-      text-decoration: none;
-      vertical-align: top;
-    }
-    &__cardlist {
-      display: flex;
-      height: 30px;
-    }
-    &__input {
+    &__form{
       display: block;
+      width: 300px;
+      border-radius: 5px;
       margin: 0 auto;
-      border-radius: 5px;
-      height: 20px;
-      width: 250px;
-      padding: 10px 16px 8px;
-      border: 1px solid #ccc;
-      background: #fff;
-      font-size: 12px;
-    }
-    &__select {
-      border-radius: 5px;
-      height: 40px;
-      width: 125px;
-      margin-right: 5px;
-      margin-left: 5px;
-      padding: 0 16px;
-      border: 1px solid #ccc;
-      background: #fff;
-      font-size: 14px;
-      &__1 {
-        margin-left: 8px;
+      padding: 20px 20px 60px;
+      font-size: 10px;
+      color: black;
+      text-decoration: none;
+      line-height: 40px;
+      &__title1 {
+        font-size: 12px;
+        position: relative;
+        label{
+          position: absolute;
+          left: 15px;
+        }
+        #card-number-require{
+          margin-right: 110px;
+        }
+      }
+      &__title {
+        font-size: 12px;
+      }
+      &__require {
+        margin: 0 0 0 8px;
+        padding: 3px 4px;
+        border-radius: 2px;
+        background-color: #ea352d;
+        color: #fff;
+        font-size: 10px;
+        text-decoration: none;
+        vertical-align: top;
+      }
+      &__cardlist {
+        display: flex;
+        height: 30px;
+      }
+      &__input {
+        display: block;
+        margin: 0 auto;
+        border-radius: 5px;
+        height: 20px;
+        width: 250px;
+        padding: 10px 16px 8px;
+        border: 1px solid #ccc;
+        background: #fff;
+        font-size: 12px;
+      }
+      &__select {
+        border-radius: 5px;
+        height: 40px;
+        width: 125px;
+        margin-right: 5px;
+        margin-left: 5px;
+        padding: 0 16px;
+        border: 1px solid #ccc;
+        background: #fff;
+        font-size: 14px;
+        &__1 {
+          margin-left: 8px;
+        }
       }
     }
-  }
-  &__btn {
-    background-color: #ea352d;
-    color: #fff;
-    margin: 0 auto;
-    margin-top: 24px;
-    display: block;
-    width: 290px;
-    line-height: 40px;
-    font-size: 12px;
-  }
-  &__info {
-    color: #0099e8;
-    text-align: right;
-    margin-top: 5px;
-    text-decoration: none;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 1.5;
-    &__question {
-      border-radius: 50%;
-      background-color: #0099e8;
+    &__btn {
+      background-color: #ea352d;
       color: #fff;
+      margin: 0 auto;
+      margin-top: 24px;
+      display: block;
+      width: 290px;
+      line-height: 40px;
+      font-size: 12px;
+    }
+    &__info {
+      color: #0099e8;
+      text-align: right;
+      margin-top: 5px;
+      text-decoration: none;
+      font-size: 12px;
+      font-weight: 400;
+      line-height: 1.5;
+      &__question {
+        border-radius: 50%;
+        background-color: #0099e8;
+        color: #fff;
+      }
     }
   }
 }
