--- a/app/assets/stylesheets/top_pege_middle.scss
+++ b/app/assets/stylesheets/top_pege_middle.scss
@@ -1,6 +1,5 @@
 
 .middle{
-
   position: relative;
   min-height: 100%;
   color: rgb(51, 51, 51);
@@ -8,11 +7,10 @@
   font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
   font-size: 14px;
   background-color: rgb(255, 255, 255);
-  // max-width: 1020px;
+  max-width: 100%;
   width: 100%;
   margin: 0px auto;
   height: 100%;
-
   &__main{
     position: relative;
     &__slide__area{
@@ -21,21 +19,17 @@
       height: 400px;
       padding-top: 28px;
       box-sizing: border-box;
-      // max-width: 100%;
     }
     &__category{
-
       height: 171px;
       display: block;
       position: relative;
       width: 100%;
       padding: 56px 0px 30px;
-      box-sizing: border-box;
-      
+      box-sizing: border-box;      
       &__area{
       }
       &__text{
-
         margin-bottom: 16px;
         text-align: center;
         box-sizing: border-box;
@@ -44,58 +38,19 @@
         line-height: 1.4em;
         margin-bottom: 16px;
         text-align: center;
-        
       }
       &__under{
-
         &__area{
           height: 40px;
-          // display: block;
           text-align: center;
           width: 100%;
           margin: -10px 0px 0px -10px;
           box-sizing: border-box;
           &__a{
-            // display: inline-block;
             margin: 10px 0px 0px 10px;
-
-            &__1{
+            &__parts{
               background-color: rgb(239, 239, 239);
               cursor: pointer;
-              // display: inline-block;
-              font-size: 14px;
-              font-weight: 600;
-              border-radius: 15px;
-              padding: 8px 16px;
-              text-decoration: none;
-              color: rgb(51, 51, 51);
-            }
-            &__2{
-              background-color: rgb(239, 239, 239);
-              cursor: pointer;
-              // display: inline-block;
-              font-size: 14px;
-              font-weight: 600;
-              border-radius: 15px;
-              padding: 8px 16px;
-              text-decoration: none;
-              color: rgb(51, 51, 51);
-            }
-            &__3{
-              background-color: rgb(239, 239, 239);
-              cursor: pointer;
-              // display: inline-block;
-              font-size: 14px;
-              font-weight: 600;
-              border-radius: 15px;
-              padding: 8px 16px;
-              text-decoration: none;
-              color: rgb(51, 51, 51);
-            }
-            &__4{
-              background-color: rgb(239, 239, 239);
-              cursor: pointer;
-              // display: inline-block;
               font-size: 14px;
               font-weight: 600;
               border-radius: 15px;
@@ -111,7 +66,6 @@
   }
 
 .middle__main__block{
-
   padding: 42px 100px 100px;
   position: relative;
   min-height: 100%;
@@ -122,21 +76,18 @@
   width: 100%;
   height:615px;
   box-sizing: border-box;
-  display: block;
   margin: 0 auto;
-
   &__item{
     width: 100%;
     height:573px;
     background-color: rgb(245, 245, 245);
     box-sizing: border-box;
-
+    margin: 0 auto;
     &__top{
       height:33px;
       margin-bottom: 16px;
       display: flex;
       box-sizing: border-box;
-
       &__left{
         font-size: 24px;
         font-weight: 600;
@@ -147,7 +98,7 @@
         color: rgb(51, 51, 51);
         position: relative;
         box-sizing: border-box;
-
+        margin: 0 auto;
       }
       &__right{
         font-size: 14px;
@@ -159,9 +110,9 @@
         text-decoration: none;
         cursor: pointer;
         box-sizing: border-box;
-
+        margin: 0 auto;
       }
-      .fas.fa-chevron-right{
+    .fas.fa-chevron-right{
         height: 10px;
     width: 10px;
     bottom: 0px;
@@ -169,20 +120,14 @@
     position: absolute;
     right: 2px;
     top: 0px;
-    // transform: rotate(-45deg);
     margin-top: 7px;
     box-sizing: border-box;
-
-
       }
     }
       &__area{
         float:left;
         display: flex;
         box-sizing: border-box;
-        
-
-
         &__split{
           grid-template-columns: repeat(5, 1fr);
           gap: 20px 20px;
@@ -196,7 +141,6 @@
           background-color: rgb(245, 245, 245);
           height:252px;
           width: 188;
-          // display: inline-block;
           position: relative;
         }
         &__1{
@@ -205,126 +149,13 @@
   }
 }
 
-
-.middle__main__block__item__area__1{
-  
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  text-decoration: none;
-  vertical-align: top;
-  // position: absolute;
-
-.product{
-
-  font-family: Arial,游ゴシック体,YuGothic,メイリオ,Meiryo,sans-serif;
-  height: 252;
-  width: 188;
-
-  &__upper{
-    background-color: rgb(255,255,255);
-    box-sizing: border-box;
-    color: #222;
-    font-size: 14px;
-    height: 64px;
-    line-height: 1.4em;
-    padding: 0 12px;
-    white-space: normal;
-    word-break: break-word;
-    -webkit-box-align: center;
-    align-items: center;
-    display: flex;
-    width: 100%;
-
-    &__text{
-
-      display: inline-block;
-      height: 2.8em;
-      overflow: hidden;
-      position: relative;
-      box-sizing: border-box;
-      color: #222;
-      white-space: normal;
-      word-break: break-word;
-      background: linear-gradient(90deg,hsla(0,0%,100%,0),#fff 72%);
-    bottom: 0;
-    content: "";
-    height: 50%;
-    // position: absolute;
-    right: 0;
-    width: 50%;
-
-        &__after{
-  
-        }
-      }
-    }
-
-  &__under{
-    height: 0;
-    overflow: hidden;
-    padding: 0 0 100%;
-    position: relative;
-    width: 100%;
-    vertical-align: baseline;
-    margin: 0px;
-    box-sizing: border-box;
-    display: block;
-    -webkit-box-direction: reverse;
-    cursor: pointer;
-    color: inherit;
-
-    &__price{
-      -webkit-box-align: center;
-      lign-items: center;
-      background: rgba(0,0,0,.4);
-      border-radius: 0 14px 14px 0;
-      bottom: 8px;
-      box-sizing: border-box;
-      color: #fff;
-      display: inline-flex;
-      font-size: 17px;
-      height: 28px;
-      letter-spacing: .02em;
-      margin: 0;
-      padding: 0 12px;
-      position: absolute;
-      z-index: 2;
-      vertical-align: baseline;
-      cursor: pointer;
-      -webkit-box-direction: reverse;
-
-    }
-    &__img{
-      bottom: 0;
-      // position: absolute;
-      top: 0;
-      // height: 100%;
-      object-fit: cover;
-      vertical-align: top;
-      width: 100%;
-      z-index: 1;
-      margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    -webkit-box-direction: reverse;
-    cursor: pointer;
-
-    }
-  }
-            
-}
-}
 .block__area {
-  // margin: 0px;
+  margin: 0 auto;
   box-sizing: border-box;
   cursor: pointer;
   height: 524px;
   width: 1020px;
   background-color: aqua
-
-
-
   &__text {
     color: #222;
   }
@@ -346,19 +177,15 @@
   right: 32px;
   width: 160px;
   position: fixed;
-  // box-sizing: border-box;
   text-align: center;
     z-index: 2;
     background-color: rgb(234, 53, 45);
     color: rgb(255, 255, 255);
-
     border-radius: 50%;
     display: inline-block;
-  
   .exhibit_btn__moji{
     margin-top: 30px;
     font-size: 22px;
-
   }
   .fas.fa-camera {
     font-size: 54px;
