--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -9,10 +9,10 @@
       .middle__main__category__under
         %ul.middle__main__category__under__area
           %li.middle__main__category__under__area__a
-            %a.middle__main__category__under__area__a__1{href: "#"}レディース
-            %a.middle__main__category__under__area__a__2{href: "#"}メンズ
-            %a.middle__main__category__under__area__a__3{href: "#"}家電・スマホ・カメラ
-            %a.middle__main__category__under__area__a__4{href: "#"}おもちゃ・ホビー・グッズ
+            %a.middle__main__category__under__area__a__parts{href: "#"}レディース
+            %a.middle__main__category__under__area__a__parts{href: "#"}メンズ
+            %a.middle__main__category__under__area__a__parts{href: "#"}家電・スマホ・カメラ
+            %a.middle__main__category__under__area__a__parts{href: "#"}おもちゃ・ホビー・グッズ
     .middle__main__block
       .middle__main__block__item
         .middle__main__block__item__top
@@ -21,108 +21,9 @@
           %a{herf: '#', class: 'middle__main__block__item__top__right'}
             もっと見る
             %i.fas.fa-chevron-right
-        .middle__main__block__item__area
-          .middle__main__block__item__area__split
-            .middle__main__block__item__area__a
-              %a.middle__main__block__item__area__1
-                .product
-                  .product__under
-                    .product__under__price{price: ""}¥1200
-                    %img.product__under__img{alt: "product", src:"/radies_sample1.jpg"}
-                  .product__upper
-                    .product__upper__text{style: ""}
-                      サンプル
-                      .product__upper__text__after
-            .middle__main__block__item__area__a
-              %a.middle__main__block__item__area__1
-                .product
-                  .product__under
-                    .product__under__price{price: ""}¥1200
-                    %img.product__under__img{alt: "product", src:"/radies_sample1.jpg"}
-                  .product__upper
-                    .product__upper__text{style: ""}
-                      サンプル
-                      .product__upper__text__after
-            .middle__main__block__item__area__a
-              %a.middle__main__block__item__area__1
-                .product
-                  .product__under
-                    .product__under__price{price: ""}¥1200
-                    %img.product__under__img{alt: "product", src:"/radies_sample1.jpg"}
-                  .product__upper
-                    .product__upper__text{style: ""}
-                      サンプル
-                      .product__upper__text__after
-            .middle__main__block__item__area__a
-              %a.middle__main__block__item__area__1
-                .product
-                  .product__under
-                    .product__under__price{price: ""}¥1200
-                    %img.product__under__img{alt: "product", src:"/radies_sample1.jpg"}
-                  .product__upper
-                    .product__upper__text{style: ""}
-                      サンプル
-                      .product__upper__text__after
-            .middle__main__block__item__area__a
-              %a.middle__main__block__item__area__1
-                .product
-                  .product__under
-                    .product__under__price{price: ""}¥1200
-                    %img.product__under__img{alt: "product", src:"/radies_sample1.jpg"}
-                  .product__upper
-                    .product__upper__text{style: ""}
-                      サンプル
-                      .product__upper__text__after
-            .middle__main__block__item__area__a
-              %a.middle__main__block__item__area__1
-                .product
-                  .product__under
-                    .product__under__price{price: ""}¥1200
-                    %img.product__under__img{alt: "product", src:"/radies_sample1.jpg"}
-                  .product__upper
-                    .product__upper__text{style: ""}
-                      サンプル
-                      .product__upper__text__after
-            .middle__main__block__item__area__a
-              %a.middle__main__block__item__area__1
-                .product
-                  .product__under
-                    .product__under__price{price: ""}¥1200
-                    %img.product__under__img{alt: "product", src:"/radies_sample1.jpg"}
-                  .product__upper
-                    .product__upper__text{style: ""}
-                      サンプル
-                      .product__upper__text__after
-            .middle__main__block__item__area__a
-              %a.middle__main__block__item__area__1
-                .product
-                  .product__under
-                    .product__under__price{price: ""}¥1200
-                    %img.product__under__img{alt: "product", src:"/radies_sample1.jpg"}
-                  .product__upper
-                    .product__upper__text{style: ""}
-                      サンプル
-                      .product__upper__text__after
-            .middle__main__block__item__area__a
-              %a.middle__main__block__item__area__1
-                .product
-                  .product__under
-                    .product__under__price{price: ""}¥1200
-                    %img.product__under__img{alt: "product", src:"/radies_sample1.jpg"}
-                  .product__upper
-                    .product__upper__text{style: ""}
-                      サンプル
-                      .product__upper__text__after
-            .middle__main__block__item__area__a
-              %a.middle__main__block__item__area__1
-                .product
-                  .product__under
-                    .product__under__price{price: ""}¥1200
-                    %img.product__under__img{alt: "product", src:"/radies_sample1.jpg"}
-                  .product__upper
-                    .product__upper__text{style: ""}
-                      サンプル
-                      .product__upper__text__after
+        .block__area
+          - (1..10).each do |i|
+            .block__area__product
     .middle__main__block
       .middle__main__block__item
         .middle__main__block__item__top
@@ -138,7 +39,7 @@
       .middle__main__block__item
         .middle__main__block__item__top
           %h3.middle__main__block__item__top__left
-            家電・スマホ。カメラ新着アイテム
+            家電・スマホ・カメラ新着アイテム
           %a{herf: '#', class: 'middle__main__block__item__top__right'}
             もっと見る
             %i.fas.fa-chevron-right
@@ -156,7 +57,60 @@
         .block__area
           - (1..10).each do |i|
             .block__area__product
-
+    .middle__main__category
+      %h2.middle__main__category__text
+        人気のブランド
+      .middle__main__category__under
+        %ul.middle__main__category__under__area
+          %li.middle__main__category__under__area__a
+            %a.middle__main__category__under__area__a__parts{href: "#"}シェネル
+            %a.middle__main__category__under__area__a__parts{href: "#"}ルイヴィトン
+            %a.middle__main__category__under__area__a__parts{href: "#"}シュプリーム
+            %a.middle__main__category__under__area__a__parts{href: "#"}ナイキ
+    .middle__main__block
+      .middle__main__block__item
+        .middle__main__block__item__top
+          %h3.middle__main__block__item__top__left
+            シャネル新着アイテム
+          %a{herf: '#', class: 'middle__main__block__item__top__right'}
+            もっと見る
+            %i.fas.fa-chevron-right
+        .block__area
+          - (1..10).each do |i|
+            .block__area__product
+    .middle__main__block
+      .middle__main__block__item
+        .middle__main__block__item__top
+          %h3.middle__main__block__item__top__left
+            ルイヴィトン新着アイテム
+          %a{herf: '#', class: 'middle__main__block__item__top__right'}
+            もっと見る
+            %i.fas.fa-chevron-right
+        .block__area
+          - (1..10).each do |i|
+            .block__area__product
+    .middle__main__block
+      .middle__main__block__item
+        .middle__main__block__item__top
+          %h3.middle__main__block__item__top__left
+            シュプリーム新着アイテム
+          %a{herf: '#', class: 'middle__main__block__item__top__right'}
+            もっと見る
+            %i.fas.fa-chevron-right
+        .block__area
+          - (1..10).each do |i|
+            .block__area__product
+    .middle__main__block
+      .middle__main__block__item
+        .middle__main__block__item__top
+          %h3.middle__main__block__item__top__left
+            ナイキ新着アイテム
+          %a{herf: '#', class: 'middle__main__block__item__top__right'}
+            もっと見る
+            %i.fas.fa-chevron-right
+        .block__area
+          - (1..10).each do |i|
+            .block__area__product
 .exhibit_btn
   .exhibit_btn__moji
     出品
