--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -53,6 +53,7 @@
         }
         .name {
           color:#0099e8;
+          text-decoration: none;
         }
         .user-rating {
           color: #0099e8;
@@ -64,8 +65,6 @@
             .fas.fa-meh {
               color: #fba933;
             }
-            // .fas.fa-frown {
-            // }
             .text {
               color: rgb(51, 51, 51);
             }
@@ -86,8 +85,6 @@
     &__tax {
       font-size: 10px;   
     }
-    // &__fee {    
-    // }
   }
   .item-buy-btn {
     font-size: 24px;
@@ -119,6 +116,13 @@
       border-radius: 40px;
       background: rgb(233, 229, 229); 
       padding: 8px 16px;
+      &__text{
+        color: #333;
+        background: #e9e5e5;
+        padding: 8px 4px;
+        border-radius: 40px;
+        text-decoration: none;
+      }
     }
     .button-report {
       margin: 0 0 0 16px;
@@ -126,6 +130,13 @@
       background: rgb(233, 229, 229);
       padding: 8px 16px;
       border-radius: 40px;
+      &__text{
+        color: #333;
+        background: #e9e5e5;
+        padding: 8px 4px;
+        border-radius: 40px;
+        text-decoration: none;
+      }
     }
     &__right {
       float: right;
