--- a/app/views/tests/index.html.haml
+++ b/app/views/tests/index.html.haml
@@ -1,33 +1,1 @@
--# https://www.mercari.com/jp/mypage/card/ クレジット登録画面1
-!!!
-%html
-  %head
-
-    = render 'shared/signup3'
-
-    = render 'shared/exhibit'
-
-    = render 'shared/main_page_header'
-    = render 'shared/product-details'
-
-    %footer
-      = render 'shared/aside'
-
-      = render 'shared/footer'
-      
-      = render 'shared/footer'
-
-
-
-
-    %header= render "shared/main_page_header"
-
-    .contents-box
-      %profile-main= render "shared/credit1"
-      %profile-side= render "shared/profile-sidebar"
-
-  %footer
-    = render "shared/aside"
-    = render "shared/footer"
-
-    %header= render 'shared/purchase-confirmation'
+= render "shared/credit-register"
