--- a/app/views/shared/_user_evaluation_good.html.haml
+++ b/app/views/shared/_user_evaluation_good.html.haml
@@ -85,6 +85,14 @@
                   2019年8月31日 19:00
                 %i.icon-arrow-right 
                   \::before
-        
+
     %ul.mypage-history.pager
+      %li.pager-prev.pager-cell
+        =link_to "#"
+          %i.icon-arrow-left 
+            \::before
+      %li.pager-prev.pager-cell
+        =link_to "#"
+          %i.icon-arrow-right 
+            \::before
 
