--- a/app/views/shared/_user_evaluation_bad.html.haml
+++ b/app/views/shared/_user_evaluation_bad.html.haml
@@ -1,1 +1,97 @@
+%main.l-container.clearfix 
+  .l-content 
+    %section.mypage-tab-container
+      %h2.mypage-tab-head 
+        評価一覧
+      %ul.review-history-tabs
+        %li. 
+          %h3 
+            =link_to "#"
+              すべて
+        %li.
+          %h3 
+            =link_to "#", data-toggle: "tab"
+              %div 
+                %i.icon-bad
+                  \::before 
+                良い
+        %li.
+          %h3 
+            =link_to "#", data-toggle: "tab"
+              %div 
+                %i.icon-normal
+                  \::before 
+                普通
+        %li.active
+          %h3 
+            =link_to "#", data-toggle: "tab"
+              %div 
+                %i.icon-bad
+                  \::before 
+                悪い
+      .tab-content 
+        %ul.mypage-item-list 
+          %li
+            =link_to "#", class: mypage-item-link 
+              %figure
+                = image_tag '/user_image_sample_claim.jpg', size: "", alt: "" , class: ''
+              .mypage-item-body
+                .mypage-item-text 
+                  %i.icon-bad 
+                    \::before
+                  購入者
+                .mypage-item-text
+                  DIV
+                .mypage-item-text 
+                .mypage-item-text 
+                  %i.icon-time 
+                    \::before 
+                  2019年8月31日 19:00
+                %i.icon-arrow-right 
+                  \::before
+          %li
+            =link_to "#", class: mypage-item-link 
+              %figure
+            = image_tag 'user_image_sample_claim.jpg', size: "", alt: "" , class: ''
+              .mypage-item-body
+                .mypage-item-text 
+                  bad 
+                    \::before
+                  購入者
+                .mypage-item-text
+                  DIV
+                .mypage-item-text 
+                .mypage-item-text 
+                  %i.icon-time 
+                    \::before 
+                  2019年8月31日 19:00
+                %i.icon-arrow-right 
+                  \::before
+          %li
+            =link_to "#", class: mypage-item-link 
+              %figure
+            = image_tag '/user_image_sample_claim.jpg', size: "", alt: "" , class: ''
+              .mypage-item-body
+                .mypage-item-text 
+                  bad 
+                    \::before
+                  購入者
+                .mypage-item-text
+                  DIV
+                .mypage-item-text 
+                .mypage-item-text 
+                  %i.icon-time 
+                    \::before 
+                  2019年8月31日 19:00
+                %i.icon-arrow-right 
+                  \::before
 
+    %ul.mypage-history.pager
+      %li.pager-prev.pager-cell
+        =link_to "#"
+          %i.icon-arrow-left 
+            \::before
+      %li.pager-prev.pager-cell
+        =link_to "#"
+          %i.icon-arrow-right 
+            \::before
