--- a/app/assets/stylesheets/main_page_header.scss
+++ b/app/assets/stylesheets/main_page_header.scss
@@ -1,6 +1,6 @@
 .header{
     position: relative;
-    min-height: 100%;
+    // min-height: 100%;
     color: rgb(51, 51, 51);
     background-color: rgb(245, 245, 245);
     font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
