--- a/app/views/shared/_make_sure_user_info.html.haml
+++ b/app/views/shared/_make_sure_user_info.html.haml
@@ -1,5 +1,50 @@
 %main.l-container.clearfix
   .l-content 
     %section.l-chapter-container.mypage-identification
-      %h2.l-chapter-head 
-        本人情報の登録
+      %h2.l-chapter-head 本人情報の登録
+      %form.action: "#" method: "POST", class: "l-single-inner", novalidate 
+        %div 
+          %p お客様の本人情報をご確認ください。
+            %br 登録されたお名前・生年月日を変更する場合、本人確認書類の提出が必要になります。
+          %p.text-right
+            =link_to "#", target: "_blank" 本人確認書類のアプロードについて
+              %i.icon-arrow-right 
+                \::before
+        .form-group 
+          %label お名前カナ
+          %p メルカリ太郎 
+        .form-group 
+          %label 生年月日
+          %p 1990/8/30
+        .form-group 
+          %label.for.zipcode 郵便番号
+          %span.sorm-arbitrary 任意
+          %input.type:"text", value: "",name: "zip-code", placeholder="例）1234567", class: "input-default" 
+        .form-group 
+          %label.for: prefecture　都道府県
+          %span.form-arbitrary 任意
+          .selectwrap
+            %i.icon-arrow-bottom
+              \::before 
+            %select.name: "prefecture" class: "select-default"
+            %option --
+            %option.selected 東京都
+        .form-group
+          %label.for: "city" 市区町村
+          %span.form-arbitrary 任意
+          %input.type: "text", value: "渋谷区" name: "city" placeholder: " 例）横浜市緑区", class: "input-default"
+        .form-group 
+          %label.for: "adress1_label" 番地
+          %span.form-arbitrary 任意
+          %input.type: "text", value: "宇田川町1-1-1", name: "adress1", placeholder: "例）青山1-1-1", class: "input-default" 
+        .form-group 
+          %label.for: "adress2_label" 建物名
+          %span.form-arbitrary 任意
+          %input.type: "text", value name: "aress2", placeholder: "柳ビル", class: "input-default"
+        %button type.submit, class: "btn-default btn-red" 登録する
+        .form-group text-right 
+          %p 
+            =link_to "#", target: "_blank" 本人情報について
+              %i.icon-arrow-right 
+                \::before 
+        %input type: "hidden" name: "__csrf_value", value: "#"
